--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "webpack --watch",
-    "build": "webpack --mode production && electron-builder",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production && electron-builder build",
+    "build:win": "webpack --mode production && electron-builder build --win",
+    "build:mac": "webpack --mode production && electron-builder build --mac",
+    "build:linux": "webpack --mode production && electron-builder build --linux"
   },
   "keywords": [],
   "author": "",
