--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.13",
     "d3": "^7.9.0",
+    "dompurify": "^3.2.4",
     "electron": "^35.0.1",
     "electron-store": "^10.0.1",
     "framer-motion": "^12.5.0",
+    "marked": "^15.0.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.3.0",
+    "react-window": "^1.8.11",
     "uuid": "^11.1.0",
     "y-indexeddb": "^9.0.12",
     "yjs": "^13.6.24"
